First button change

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,22 @@
         android:id="@+id/btnTextChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button"
         android:onClick="onBtnTextChangeClk"
+        android:text="@string/btnChangeTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTextChange"
         tools:ignore="OnClick" />
+
+    <Button
+        android:id="@+id/btnChangeColour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/btnChangeClr"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTextChange" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
